fix: Useless submission